# django-htmx-realtime

./: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_indexes.py  0003_alter_userprofile_birth_date_and_more.py
config/: asgi.py  settings.py  urls.py
core/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_add_indexes.py  0003_alter_contact_category_alter_contact_created_at_and_more.py
notifications/: admin.py  consumers.py  models.py  signals.py
notifications/migrations/: 0001_initial.py
static/css/src/: input.css  output.css
templates/accounts/: profile.html
templates/base/: base.html
templates/core/: contact.html  contact_list.html  home.html
templates/partials/: contact_form.html  contact_form_error.html  contact_success.html  newsletter_form.html  newsletter_success.html  password_strength.html  profile_form.html  register_form.html  validation_error.html  validation_success.html  validation_warning.html
templates/registration/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
