[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-htmx-complete"
version = "1.0.0"
description = "Complete Django + HTMX application with real-time features"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Django>=5.1,<5.2",
    "python-decouple>=3.8",
    "Pillow>=10.0.0",
    "django-debug-toolbar>=4.2.0",
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "redis>=4.5.0",
    "daphne>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-django",
]
